--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: The stuff
+subtitle: This is where the stuff is
 use-site-title: true
 ---
 
